# coursework4

./: README.md  config.py  main.py  pyproject.toml
abstract/: abstract_saver.py
src/: abstract_api.py  abstract_saver.py  headhunter.py  json_saver.py  superjob.py  vacancy.py  vacancy_handler.py
utils/: user_interaction.py  vacancies_handler.py
