[tool.poetry]
name = "coursework4"
version = "0.1.0"
description = ""
authors = ["Anna Raketa <rocketvsaliens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xlwt = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
